RESOLVED FIXED272552
REGRESSION(272801@main): CustomEvent.target is not set when dispatching event
https://bugs.webkit.org/show_bug.cgi?id=272552
Summary REGRESSION(272801@main): CustomEvent.target is not set when dispatching event
grahams
Reported 2024-04-11 14:04:39 PDT
The latest Webkit release (affecting Safari v17.4) is not setting the target and currentTarget attributes of a customEvent. Reproduction: https://codepen.io/graham_saunders/pen/jORKGJe Testing on <= v17.3 works as expected.
Attachments
rendering in safari, firefox, chrome (919.17 KB, image/png)
2024-04-11 17:45 PDT, Karl Dubost
no flags
Reduction (199 bytes, text/html)
2024-04-11 22:11 PDT, Ryosuke Niwa
no flags
Karl Dubost
Comment 1 2024-04-11 17:45:14 PDT
Created attachment 470876 [details] rendering in safari, firefox, chrome currentTarget is null in the 3 browsers. target and srcElement are different: * Firefox and Chrome: <input id="name" name="name"> * Safari: null Note that Firefox has also originalTarget and explicitOriginalTarget Tested in Safari Technology Preview 17.4 19619.1.8.1 Firefox Nightly 126.0a1 12624.4.11 Google Chrome Canary 125.0.6413.0 6413.0
Radar WebKit Bug Importer
Comment 2 2024-04-11 17:46:17 PDT
Karl Dubost
Comment 4 2024-04-11 19:05:22 PDT
In Safari 16.1 on Ventura 13 I get target and srcElement initialized to <input id="name" name="name"> and currentTarget to null.
Ryosuke Niwa
Comment 6 2024-04-11 22:11:35 PDT
Created attachment 470882 [details] Reduction
Ryosuke Niwa
Comment 7 2024-04-11 22:54:31 PDT
EWS
Comment 8 2024-04-12 12:39:28 PDT
Committed 277435@main (5b488a0a1b57): <https://commits.webkit.org/277435@main> Reviewed commits have been landed. Closing PR #27184 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.