Cherry-pick 5b488a0a1b57. rdar://126311287

REGRESSION(272801@main): CustomEvent.target is not set when dispatching event
    https://bugs.webkit.org/show_bug.cgi?id=272552
    <rdar://126311287>

    Reviewed by Yusuke Suzuki.

    Set Event's target even when there is no relevant event listener since this is observable by scripts.

    * LayoutTests/fast/dom/dispatch-event-without-event-listener-expected.txt: Added.
    * LayoutTests/fast/dom/dispatch-event-without-event-listener.html: Added.
    * Source/WebCore/dom/EventDispatcher.cpp:
    (WebCore::EventDispatcher::dispatchEvent):

    Canonical link: https://commits.webkit.org/277435@main

Identifier: 272448.928@safari-7618-branch